k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plot-listing
  labels:
    name: plot-listing
    environment: production
